.provarCaches/00D410000011HE0EAM/objects/rstkf__printemailtemplatedetail__c.object
<CustomObject>
    <description>printemailtemplatedetail__c</description>
    <fields>
        <fullName>Balance_Due_Number__c</fullName>
        <formula>VALUE(rstkf__balancedue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <formula>IF(DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;=TODAY(), VALUE(rstkf__balancedue__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Late_Number__c</fullName>
        <formula>VALUE(rstkf__dayslate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date_Band__c</fullName>
        <formula>IF(DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&lt;=TODAY(),&quot;Current&quot;,
IF(DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&lt;=TODAY()-1&amp;&amp;DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;=TODAY()-30,&quot;1-30&quot;,
IF(DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&lt;=TODAY()-31&amp;&amp;DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;=TODAY()-60,&quot;31-60&quot;,
IF(DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&lt;=TODAY()-61&amp;&amp;DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;=TODAY()-90,&quot;61-90&quot;,
IF(DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;=TODAY()-91,&quot;Over 90&quot;,&quot;ERROR&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Date__c</fullName>
        <formula>DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Over_90_Days__c</fullName>
        <formula>IF(TODAY()-DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;90,VALUE(rstkf__balancedue__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Due_1_30__c</fullName>
        <formula>IF(DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&lt;=TODAY()-1&amp;&amp;DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;=TODAY()-30,VALUE(rstkf__balancedue__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due 1-30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Due_31_60__c</fullName>
        <formula>IF(DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;=TODAY()-31&amp;&amp;DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;=TODAY()-60,VALUE(rstkf__balancedue__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due 31-60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Due_61_90__c</fullName>
        <formula>IF(DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;=TODAY()-61&amp;&amp;DATE(VALUE(RIGHT(rstkf__duedate__c,4)),VALUE(LEFT(rstkf__duedate__c,2)),VALUE(MID(rstkf__duedate__c,4,2)))&gt;=TODAY()-90,VALUE(rstkf__balancedue__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due 61-90</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__balancedue__c</fullName>
        <description>balancedue__c</description>
        <label>Balance Due</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__date__c</fullName>
        <description>date__c</description>
        <label>Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__dayslate__c</fullName>
        <description>dayslate__c</description>
        <label>Days Late</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__docno__c</fullName>
        <description>docno__c</description>
        <label>Document</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__duedate__c</fullName>
        <description>duedate__c</description>
        <label>Due Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__printemailtemplatedetail_socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Company</description>
        <inlineHelpText>Customer Company</inlineHelpText>
        <label>Customer Company</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>Print Email Template Details</relationshipLabel>
        <relationshipName>printemailtemplatedetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__printemailtemplateheader__c</fullName>
        <description>printemailtemplateheader__c</description>
        <label>Print Email Template Header</label>
        <referenceTo>rstkf__printemailtemplateheader__c</referenceTo>
        <relationshipLabel>Print Email Template Details</relationshipLabel>
        <relationshipName>printemailtemplatedetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__type__c</fullName>
        <description>type__c</description>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Print Email Template Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Email Template Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>